ESM-800 - Update Guidance Page Content

--- a/modules/guidance/client/views/guidance-main.html
+++ b/modules/guidance/client/views/guidance-main.html
@@ -11,21 +11,21 @@
             <h2>About this Website</h2>
             <p>The purpose of this website is to provide people with access to information and opportunities to participate in environmental assessments in British Columbia. For the purposes of this website, users belong to one of two groups:</p>
             <ol>
-                <li>Members of the public or</li>
+                <li>Members of the public; or</li>
                 <li>Environmental assessment participants</li>
             </ol>
             <h3><strong>You are a member of the public if you:</strong></h3>
             <ul>
-                <li>Would like to provide input into the environmental assessment for a specific project</li>
-                <li>Want to access key documents</li>
-                <li>Are interested in getting information about the environmental assessment process</li>
+                <li>Would like to provide input into the environmental assessment for a specific project;</li>
+                <li>Want to access key documents;</li>
+                <li>Are interested in getting information about the environmental assessment process.</li>
             </ul>
-            <p>Members of the public can access all of the necessary features and tools simply by visiting the website without the need to take any further steps. If you have any difficulty finding what you are looking for, simply send us an e-mail at the following address and we will be happy to help: <a class="content-link" href="mailto:epicsupport.eao@gov.bc.ca">epicsupport.eao@gov.bc.ca.</a></p>
+            <p>Members of the public can access all of the necessary features and tools to do the above simply by visiting the website, without the need to take any further steps. If you have any difficulty finding what you are looking for, simply send us an e-mail at the following address and we will be happy to help: <a class="content-link" href="mailto:epicsupport.eao@gov.bc.ca">epicsupport.eao@gov.bc.ca.</a></p>
             <h3><strong>You are an environmental assessment participant if you:</strong></h3>
             <ul>
-                <li>Are proposing to develop a project that requires (or may require) an environmental assessment</li>
-                <li>Are an official representative of an Aboriginal group</li>
-                <li>Are a representative of a local, provincial, federal, or U.S. state government that has been invited to participate as a technical expert in the environmental assessment of a specific project</li>
+                <li>Are proposing to develop a project that requires (or may require) an environmental assessment;</li>
+                <li>Are an official representative of an Aboriginal group; or</li>
+                <li>Are a representative of a local, provincial, federal, or U.S. state government that has been invited to participate as a technical expert in the environmental assessment of a specific project.</li>
             </ul>
         </section><!-- / ABOUT -->
 
@@ -33,7 +33,7 @@
         <!-- LOG IN INFO -->
         <section class="info-block">
             <h2>How to Log In</h2>
-            <p>Environmental assessment participants are required to click on the <strong>LOG IN</strong> link at the top right-hand corner of the homepage of the website in order to proceed authentication. If you have any difficulty during the authentication process, please contact the Environmental Assessment Office at <a class="content-link" href="mailto:epicsupport.eao@gov.bc.ca">epicsupport.eao@gov.bc.ca</a> or by phone at (250) 356-7441.</p>
+            <p>Environmental assessment participants are required to click on the <strong>LOG IN</strong> link at the top right-hand corner of the homepage of the website in order to proceed to authentication. If you have any difficulty during the authentication process, please contact the Environmental Assessment Office at <a class="content-link" href="mailto:epicsupport.eao@gov.bc.ca">epicsupport.eao@gov.bc.ca</a> or by phone at (250) 356-7441.</p>
         </section><!-- / LOG IN INFO -->
 
 
@@ -44,7 +44,7 @@
             <ul>
                 <li><a class="content-link" href="http://www.eao.gov.bc.ca/compliance_guidance.html" target="_blank">Compliance and Enforcement Guidance Documents</a></li>
             </ul>
-            <h3>General Guidance and Informaiton</h3>
+            <h3>General Guidance and Information</h3>
             <ul>
                 <li><a class="content-link" href="http://www.eao.gov.bc.ca/ea_process.html" target="_blank">EA Process</a></li>
                 <li><a class="content-link" href="http://www.eao.gov.bc.ca/guidance.html" target="_blank">Guidance Documents</a></li>
