--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -75,6 +75,13 @@
 			</li>
 
 			<li class="custom-nav-item">
+				<a href ui-sref="contact">
+					<span class="glyphicon glyphicon glyphicon-envelope"></span>
+					<span>CONTACT</span>
+				</a>
+			</li>
+
+			<li class="custom-nav-item">
 				<a href ui-sref="guidance">
 					<span class="glyphicon glyphicon-question-sign"></span>
 					<span>GUIDANCE</span>
