--- a/modules/guidance/client/views/contact.html
+++ b/modules/guidance/client/views/contact.html
@@ -1,31 +1,32 @@
 <div class="main-panel">
 
-<div class="view-title-container no-border">
-    <h1>Contact Us</h1>
-</div>
+    <div class="view-title-container no-border">
+        <h1>Contact Us</h1>
+    </div>
 
-<div class="view-body-container">
+    <div class="view-body-container">
 
-    <section class="info-block">
-        <h2>Support</h2>
-        <p>If you are experiencing any difficulties with this website, please send us an e-mail at <a class="content-link" href="mailto:epicsupport.eao@gov.bc.ca">epicsupport.eao@gov.bc.ca</a> and we will be happy to help.</p>
-        <h3>Sector Contacts</h3>
-        <p>Visit our website at <a class="content-link" href="http://www.eao.gov.bc.ca/contact_us.html" target="_blank">www.eao.gov.bc.ca</a> for a list of contact information by sector.</p>
-        <h3>Compliance & Enforcement</h3>
-        <p>For questions relating to compliance for EA certified projects or if you have information about a suspected non-compliance with a condition of an environmental assessment certificate, please email <a class="content-link" href="mailto:eao.compliance@gov.bc.ca">eao.compliance@gov.bc.ca</a>.</p>
-        <h3>Environmental Assessment Office Staff</h3>
-        <p>Please use the <a class="content-link" href="http://dir.gov.bc.ca/gtds.cgi?show=Branch&organizationCode=ENV&organizationalUnitCode=ENVIRON5" target="_blank">EAO B.C. Government Directory listing</a> to find contact information for specific Environmental Assessment Office staff.</p>
-    </section>
+        <section class="info-block">
+            <h2>Provide Feedback</h2>
+            <p>The purpose of this website is to provide people with access to information and opportunities to participate in environmental assessments in British Columbia.</p>
+            <p>In February 2017, the BC Environmental Assessment Office proudly launched the first phase of a modernized version of its web-based information system: the EAO Project Information and Collaboration System (also known as “EPIC”).</p>
+            <p>EPIC has been designed, built and implemented to improve the efficiency and transparency of the provincial environmental assessment process, and to provide citizens and stakeholders with more intuitive access to project data and information.</p>
+            <p>It marks a substantial business and process change for all participants and stakeholders in the environmental assessment process, including project proponents, Aboriginal groups, working group members, and the public.</p>
+            <p>The Environmental Assessment Office will continue making improvements to EPIC over time, so if you are interested in providing us with feedback about your experience in using this website, please feel encouraged to send us your comments at: <a href="mailto: epicsupport.eao@gov.bc.ca">epicsupport.eao@gov.bc.ca</a>.</p>
+        </section>
 
-    <section class="info-block">
-        <h2>Feedback Instructions</h2>
-        <p>The purpose of this website is to provide people with access to information and opportunities to participate in environmental assessments in British Columbia.</p>
-        <p>In June 2016, the Environmental Assessment Office was proud to launch the first phase of a modernized version of its web-based information system: the EAO Project Information Centre (also known as “EPIC”).</p>
-        <p>EPIC has been designed, built and implemented to improve the efficiency and transparency of the provincial environmental assessment process, and to provide citizens and stakeholders with more intuitive access to project data and information.</p>
-        <p>It marks a substantial business and process change for all participants and stakeholders in the environmental assessment process, including project proponents, Aboriginal groups, working group members, and the public.</p>
-        <p>The Environmental Assessment Office will continue making improvements to EPIC over time, so if you are interested in providing us with feedback about your experience in using this website, please feel free to send us your comments at: <a class="content-link" href="mailto:epicsupport.eao@gov.bc.ca">epicsupport.eao@gov.bc.ca</a>.</p>
-    </section>
+        <section class="info-block">
+            <h2>Get Support</h2>
+            <p>If you are experiencing any difficulties with this website, please send us an e-mail at <a href="mailto: epicsupport.eao@gov.bc.ca">epicsupport.eao@gov.bc.ca</a> and we will be happy to help.</p>
+        </section>
 
-</div>
+        <section class="info-block">
+            <h2>Contact Us</h2>
+            <p><strong>Environmental Assessment Office Staff</strong><br> Please use the <a href="http://dir.gov.bc.ca/gtds.cgi?show=Branch&organizationCode=ENV&organizationalUnitCode=ENVIRON5" target="_blank">EAO B.C. Government Directory</a> listing to find contact information for specific Environmental Assessment Office staff.<p>
+            <p><strong>EAO Compliance &amp; Enforcement</strong><br>For questions relating to compliance for EA certified projects or if you have information about a suspected non-compliance with a condition of an environmental assessment certificate, please email <a href="mailto:eao.compliance@gov.bc.ca">eao.compliance@gov.bc.ca</a>.</p>
+            <p><strong>BC Government Natural Resource Sector Contacts</strong><br>Visit our website at <a href="www.eao.gov.bc.ca" target="_blank">www.eao.gov.bc.ca</a> for a list of contact information by sector.</p>
+        </section>
+
+    </div>
 
 </div>
