--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -1,19 +1,67 @@
-<div class="app-footer clearfix" ng-cloak>
-	<div id="main-foot-content">
-		<div class="pull-left">
-			<span ng-if="footer.environment === 'MEM'">Ministry of Energy and Mines, Province of British Columbia</span>
-      	</div>
-		<div class="pull-left">
-				<a href="/" title="Home">Home</a> |
-				<a target="_new" href="http://www.gov.bc.ca/com/copyright.html" title="BC Government Copyright Information">Copyright</a> |
-				<a target="_new" href="http://www.gov.bc.ca/com/disclaimer.html" title="BC Government Warranty Disclaimer and Limitation of Liabilities Information">Disclaimer</a> |
-				<a target="_new" href="http://www.gov.bc.ca/com/privacy.html" title="BC Government Privacy Information">Privacy</a> |
-				<a target="_new" href="http://www.gov.bc.ca/com/accessibility.html" title="BC Government Accessibility Information">Accessibility</a> |
-				<a href ui-sref="contact" title="Contact Us">Contact Us</a> | 
-				<a ng-show="!footer.authentication.user" ui-sref="authentication.signin">Log In (Siteminder)</a>
-        			<span ng-show="!footer.authentication.user"> | </span> <a ng-show="!footer.authentication.user" href ui-sref="authentication.local">Log In (local)</a>
-				<!-- TODO: Siteminder! get the Siteminder logout url and set it here -->
-				<a ng-show="footer.authentication.user" href="/api/auth/signout" target="_self">Logout</a>
-    	</div>
+<footer>
+	<div class="container">
+		<div class="row">
+
+			<div class="col-md-4">
+				<section>
+					<h4>About this website...</h4>
+					<p class="mb-0">The Ministry of Energy and Mines (MEM), Ministry of Environment (MOE), and Environmental Assessment Office (EAO) have collaborated to make information on the Province’s oversight of major mines in British Columbia accessible to the public.</p>
+				</section>
+			</div>
+
+			<div class="col-md-4">
+				<section>
+					<h4>Site Navigation</h4>
+					<h5>About Mining in British Columbia</h5>
+					<ul>
+						<li>
+							<a href="#">The Mining Lifecycle</a>
+						</li>
+						<li>
+							<a href="#">Topics of Interest</a>
+						</li>
+						<li>
+							<a href="#">Find Mines in British Columbia</a>
+						</li>
+					</ul>
+					<h5>Our Processes &amp; Procedures</h5>
+					<ul class="mb-0">
+						<li>
+							<a href="legislation.html">Legislation</a>
+						</li>
+						<li>
+							<a href="authorizations.html">Authorizations</a>
+						</li>
+						<li>
+							<a href="compliance-oversight.html">Compliance Oversight</a>
+						</li>
+					</ul>
+				</section>
+			</div>
+
+			<div class="col-md-4">
+				<section>
+					<h4>Connect With Us</h4>
+					<p>The BC Mine Information website is continuously evolving. More information and features will be added to the site on an ongoing basis. We welcome feedback to help us decide what would be most valuable.</p>
+					<a class="btn slide-r-btn inverted" href="#"><span>Submit Feedback</span><i class="material-icons">arrow_forward</i></a>
+				</section>
+			</div>
+		</div>
+
+		<div class="footer-admin clearfix">
+			<ul class="gov-links float-left">
+				<li><a href="#">Home</a></li>
+				<li><a href="http://www2.gov.bc.ca/gov/content/home/copyright" target="_blank">Copyright</a></li>
+				<li><a href="http://www2.gov.bc.ca/gov/content/home/disclaimer" target="_blank">Disclaimer</a></li>
+				<li><a href="http://www2.gov.bc.ca/gov/content/home/privacy" target="_blank">Privacy</a></li>
+				<li><a href="http://www2.gov.bc.ca/gov/content/home/accessibility" target="_blank">Accessibility</a></li>
+			</ul>
+			<ul class="connect-links float-right">
+				<li><img src="icons/facebook_circle.svg"/></li>
+				<li><img src="icons/twitter_circle.svg"/></li>
+				<li><img src="icons/google_circle.svg"/></li>
+			<ul>
+		</div>
+		
 	</div>
-</div>
+</footer> 
