--- a/modules/projects/client/views/projects.abstract.html
+++ b/modules/projects/client/views/projects.abstract.html
@@ -4,8 +4,8 @@
 	<div ng-if="!seenOnce" class="welcome-alert alert alert-success alert-dismissible" role="alert">
 		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		<h2>EAO Project Information &amp; Collaboration System</h2>
-		<p>Welcome to the BC Environmental Assessment Office’s new web-based Project Information and Collaboration System (“EPIC”), our tool to improve the efficiency and transparency of the provincial environmental assessment process, and to provide citizens and stakeholders with more intuitive access to project data and information.</p>
-		<p>EPIC is being launched as a “beta” – a fully-functional starting point upon which to build continuous improvements – and, as such, we’re seeking your feedback on how to make it better meet your needs. To do so, please send us an email at <a href="mailto:epicsupport.eao@gov.bc.ca">epicsupport.eao@gov.bc.ca</a>, or visit the Contact section in the navigation at top or bottom of the website to learn more.</p>
+		<p>Welcome to the BC Environmental Assessment Office’s new web-based Project Information and Collaboration System (EPIC), which is aimed at improving the efficiency and transparency of the provincial environmental assessment process by providing citizens and stakeholders with more intuitive access to project data and information.</p>
+		<p>EPIC is being launched as a “beta” – a fully-functional starting point upon which to build continuous improvements. As such, we’re seeking your feedback on how to make it better meet your needs. To do so, please send us an email at <a href="mailto:epicsupport.eao@gov.bc.ca">epicsupport.eao@gov.bc.ca</a>.</p>
 		<div class="clearfix">
 			<button class="btn btn-success pull-right" data-dismiss="alert" aria-label="Close">Get Started</button>
 		</div>
