ESM-801 - Create "Feedback" Modal
- copy changes

--- a/modules/projects/client/views/projects.abstract.html
+++ b/modules/projects/client/views/projects.abstract.html
@@ -5,7 +5,7 @@
 		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		<h2>EAO Project Information &amp; Collaboration System</h2>
 		<p>Welcome to the BC Environmental Assessment Office’s new web-based Project Information and Collaboration System (EPIC), which is aimed at improving the efficiency and transparency of the provincial environmental assessment process by providing citizens and stakeholders with more intuitive access to project data and information.</p>
-		<p>EPIC is being launched as a “beta” – a fully-functional starting point upon which to build continuous improvements. As such, we’re seeking your feedback on how to make it better meet your needs. To do so, please send us an email at <a href="mailto:epicsupport.eao@gov.bc.ca">epicsupport.eao@gov.bc.ca</a>.</p>
+		<p>EPIC is being launched as a “beta” – a fully-functional starting point upon which to build continuous improvements. As such, we’re seeking your feedback on how to make it better meet your needs. To do so, please send us an email at <a href="mailto:epicsupport.eao@gov.bc.ca">epicsupport.eao@gov.bc.ca</a> or <a href ui-sref="contact">click here</a> to learn more.</p>
 		<div class="clearfix">
 			<button class="btn btn-success pull-right" data-dismiss="alert" aria-label="Close">Get Started</button>
 		</div>
